[gd_scene load_steps=10 format=3 uid="uid://deuxedx26axae"]

[ext_resource type="Texture2D" uid="uid://daxfjmj1ej0du" path="res://ui/mainmenu_1.png" id="1_2jdus"]
[ext_resource type="Script" path="res://scripts/mainmenu/main_menu.gd" id="1_nu8j8"]
[ext_resource type="Texture2D" uid="uid://dwjgls5bnupnd" path="res://ui/mainmenu_bg.png" id="1_wd1rq"]
[ext_resource type="Texture2D" uid="uid://b33le5rq2t3df" path="res://ui/mainmenu_2.png" id="2_fnl1k"]
[ext_resource type="Texture2D" uid="uid://dususyrcbxqjg" path="res://ui/mainmenu_3.png" id="3_ges5e"]
[ext_resource type="Texture2D" uid="uid://dcmv6eesrv8mc" path="res://ui/mainmenu_4.png" id="4_snbql"]
[ext_resource type="Texture2D" uid="uid://cypo3jna8v2jt" path="res://ui/mainmenu_l2.png" id="7_uevlm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ye7x6"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7m1f"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_nu8j8")

[node name="layer1" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="menu_bg" type="TextureRect" parent="layer1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wd1rq")
expand_mode = 3
stretch_mode = 5

[node name="menu1" type="TextureRect" parent="layer1"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2jdus")
expand_mode = 3
stretch_mode = 5

[node name="menu2" type="TextureRect" parent="layer1"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fnl1k")
expand_mode = 3
stretch_mode = 5

[node name="menu3" type="TextureRect" parent="layer1"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ges5e")
expand_mode = 3
stretch_mode = 5

[node name="menu4" type="TextureRect" parent="layer1"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_snbql")
expand_mode = 3
stretch_mode = 5

[node name="layer2" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="overlay" type="TextureRect" parent="layer2"]
self_modulate = Color(0, 0.713726, 0.780392, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_uevlm")
expand_mode = 3
stretch_mode = 5

[node name="title" type="Label" parent="layer2"]
layout_mode = 0
offset_left = 18.0
offset_top = 3.0
offset_right = 186.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 46
text = "TITLE"

[node name="2" type="Control" parent="layer2"]
visible = false
anchors_preset = 0

[node name="vb" type="VBoxContainer" parent="layer2/2"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 54.0
offset_top = 241.0
offset_right = 340.0
offset_bottom = 399.0

[node name="serv_make" type="Button" parent="layer2/2/vb"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_ye7x6")
theme_override_styles/normal = SubResource("StyleBoxFlat_u7m1f")
text = "Create Lobby"

[node name="Control" type="Control" parent="layer2/2/vb"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="lobby_code" type="LineEdit" parent="layer2/2/vb"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
placeholder_text = "XXXX"
max_length = 4
context_menu_enabled = false

[node name="serv_join" type="Button" parent="layer2/2/vb"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_ye7x6")
theme_override_styles/normal = SubResource("StyleBoxFlat_u7m1f")
text = "Join Lobby"
